# SevenDaysMiracleBible

./: .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: CLAUDE.md  build-bible-db.ts  build-commentary-db.ts  build-interlinear-db.ts  build-release-assets.ts  build-release-dbs.ts  generate-ai-commentary.ts  generate-ai-translation.ts  generate-section-headings.ts  generate-story-bible.ts  import-bible-data.ts  import-interlinear-hebrew.ts  import-interlinear.ts  import-original-texts.ts  parse-usfm-paragraphs.ts  retry-failed-chapters.ts  review-translation.ts  translate-bible-en.ts  translate-bible-ko.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_create_schema.sql  001_init.sql  002_add_niv_esv.sql  002_bookmark_text.sql  002_seed_books.sql  003_add_sav_en.sql  003_update_download_sizes.sql  004_add_story_ko.sql  004_bookmark_unique_index.sql  005_bookmark_translation_id.sql  006_paragraph_and_sections.sql  007_bookmark_labels.sql  008_interlinear_words.sql
src-tauri/resources/: bible-core.db
src-tauri/src/: edge_tts.rs  lib.rs  main.rs
src-tauri/src/fonts_plugin/: mod.rs
src-tauri/src/tts_plugin/: mobile.rs  mod.rs
src/components/: Toast.tsx
src/hooks/: useDictionary.ts  useTTS.ts
src/i18n/: index.ts
src/lib/: announcements.ts  backup.ts  bible.ts  bookmarks.ts  commentaryService.ts  db.ts  dictionaryService.ts  downloadConfig.ts  downloadUtils.ts  edgeTts.ts  feedback.ts  googleFonts.ts  (+3 more)
(+42 files in other folders)
